# integrations

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  MIGRATION_CONTEXT.md  README.md  README.rst  bitbucket-pipelines.yml  cookiecutter.json  data.json  documentation.md  index.html  logo.icns  nx.json  package-lock.json  package.json  pants.toml  pipeline_test.py  pyproject.toml  requirements.txt  setup.py
app/connect/: pyproject.toml
apps/connect/: BUILD  README.md  conftest.py  installer.py  pyproject.toml  release_notes.md  setup.py
apps/connect/connect-installer/: __version__.py
apps/connect/doc/: conf.py
apps/connect/resource/: BUILD  BUILD_PANTS  resource.qrc  style_dark.css  style_light.css
configuration/maya/: pyproject.toml
configuration/runtime/: pyproject.toml
deprecated_projects/rv/: pyproject.toml
installers/app-installer/: README.md  pyproject.toml  release_notes.md
lib/app_launcher/: pyproject.toml
lib/qt/: README.md  pyproject.toml
lib/qt/doc/: conf.py  index.rst
lib/qt/ftrack_connect_pipeline_qt/: _version.py
lib/qt/ftrack_pipeline_qt/: event.py
libs/constants/: README.md  pyproject.toml  release_notes.md
libs/constants/source/: constants.js
libs/dcc-test-harness/: README.md  conftest.py  pyproject.toml
libs/dcc-test-harness/tests/: conftest.py  test_protocol.py
libs/framework-core/: BUILD  CONTRIBUTING.md  README.md  genindex.html  glossary.html  index.html  installing.html  objects.inv  py-modindex.html  pyproject.toml  release_notes.md  searchindex.js  setup.py
libs/framework-core/.doctrees/: environment.pickle  installing.doctree  troubleshooting.doctree
libs/framework-core/_sources/: glossary.rst.txt  index.rst.txt
libs/framework-core/api_references/: ftrack_framework_core.asset.html  ftrack_framework_core.constants.asset.html  ftrack_framework_core.constants.html  ftrack_framework_core.constants.plugin.html  ftrack_framework_core.host.engine.html  ftrack_framework_core.host.html  ftrack_framework_core.plugin.html  ftrack_framework_core.plugin.open.html  ftrack_framework_core.plugin.publish.html  modules.html
libs/framework-core/developing/: build.html  deploy.html  download.html  environment.html
libs/framework-core/doc/: conf.py  glossary.rst  index.rst  troubleshooting.rst
libs/framework-core/hook/: discover_framework_core.py  discover_ftrack_framework_core.py  discover_pipeline.py
libs/framework-core/introduction/: overview.html
libs/framework-core/rc/: .buildinfo  index.html  search.html  searchindex.js  troubleshooting.html
libs/framework-core/release/: index.html  release_notes.html
libs/framework-core/source/: core.js
libs/framework-core/tutorial/: finalise.html  index.html  introduction.html  launch.html  load.html  open.html  structure.html  tool.html
libs/framework-plugin/: README.md  pyproject.toml
libs/framework-qt/: BUILD  CONTRIBUTING.md  LICENSE.txt  README.md  py-modindex.html  pyproject.toml  release_notes.md  setup.cfg  setup.py
libs/framework-qt/.doctrees/: environment.pickle
libs/framework-qt/doc/: conf.py  index.rst  readthedocs.yaml
libs/framework-qt/hook/: discover_framework_qt.py  discover_ftrack_framework_qt.py  discover_qt.py
libs/framework-qt/rc/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
libs/framework-qt/release/: index.html  release_notes.html
libs/framework-qt/tests/: widgets_pipeline_test.py
libs/qt/: README.md  __init__.py  pyproject.toml  release_notes.md  setup.py
libs/qt-style/: README.md  pyproject.toml  release_notes.md  setup.py
libs/utils/: README.md  __init__.py  pyproject.toml  release_notes.md
libs/utils/tests/: test_asset_tracer.py  test_aws.py
projects/application-launcher/: .buildinfo  BUILD  BUILD_PANTS  README.md  developing.html  index.html  integrating.html  objects.inv  pyproject.toml  searchindex.js  setup.py
projects/application-launcher/.doctrees/: about.doctree  developing.doctree  environment.pickle
projects/application-launcher/api/: ftrack_application_launcher.html
projects/application-launcher/doc/: conf.py  index.rst  installing.rst
projects/application-launcher/rc/: about.html  genindex.html  installing.html  search.html  using.html
projects/application-launcher/release/: migration.html  release_notes.html
projects/connect-action-launcher-widget/: BUILD  README.md  genindex.html  glossary.html  index.html  installing.html  pyproject.toml  search.html  setup.py  using.html  using_actions.html
projects/connect-action-launcher-widget/.doctrees/: environment.pickle  index.doctree  using_actions.doctree
projects/connect-action-launcher-widget/_static/: lowdown.css
projects/connect-action-launcher-widget/connect-plugin/: __version__.py
projects/connect-action-launcher-widget/doc/: conf.py  index.rst  installing.rst  (+1 more)
projects/connect-plugin-manager/: BUILD  CONTRIBUTING.md  README.md  genindex.html  pyproject.toml  searchindex.js  setup.cfg  setup.py
projects/connect-publisher-widget/: BUILD  BUILD_PANTS  CONTRIBUTING.md  README.md  glossary.html  index.html  objects.inv  publishing.html  pyproject.toml  release_notes.md  setup.py  using.html
projects/connect-timetracker-widget/: BUILD  README.md  pyproject.toml  release_notes.md  setup.py
projects/framework-aftereffects/: README.md  STATUS.md  pyproject.toml  release_notes.md
projects/framework-common-extensions/: pyproject.toml  release_notes.md  requirements.txt
projects/framework-flame/: README.md  pyproject.toml  release_notes.md
projects/framework-harmony/: README.md  conftest.py  pyproject.toml  release_notes.md
projects/framework-houdini/: .buildinfo  BUILD  CONTRIBUTING.md  README.md  index.html  objects.inv  pyproject.toml  release_notes.md  search.html  searchindex.js  setup.py
projects/framework-max/: README.md  pyproject.toml  release_notes.md
projects/framework-maya/: BUILD  CONTRIBUTING.md  README.md  maya-integration.yaml  pyproject.toml  release_notes.md  searchindex.js  setup.py
projects/framework-maya-deadline/: CLAUDE.md  PLAN.md  README.md  pyproject.toml
(+6348 files in other folders)
