[project]
name = "ftrack-integrations-monorepo"
version = "0.0.0"
description = "ftrack Integrations Monorepo"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">= 3.8, < 3.13"
authors = [
  { name = "ftrack Integrations Team", email = "integrations@backlight.co" }
]

[project.urls]
homepage = "https://ftrack.com"
repository = "https://github.com/ftrackhq/integrations/"

[project.optional-dependencies]
test = [
  'pytest >= 6.0.0, < 7.0.0',
  'pytest-mock',
  'coverage[toml] >= 7.3.2, < 8.0.0; python_version >= "3.8"',
]

dev = [
  'ruff >= 0.4.4',
  'pre-commit >= 3.0.0, < 4.0.0',

  "ftrack-constants",
  "ftrack-utils",
  "ftrack-framework-core",
  "ftrack-framework-qt",
  "ftrack-qt",
  "ftrack-qt-style",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "README.md",
    "pyproject.toml"
]

[tool.uv.sources]
ftrack-constants = { path = "libs/constants" }
ftrack-utils = { path = "libs/utils" }
ftrack-framework-core = { path = "libs/framework-core" }
ftrack-framework-qt = { path = "libs/framework-qt" }
ftrack-qt = { path = "libs/qt" }
ftrack-qt-style = { path = "libs/qt-style" }

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ignore=tests/framework/manual"
pythonpath = [
     'libs/constants/source',
     'libs/utils/source',
     'libs/framework-core/source',
     # QT
     'libs/framework-qt/source',
     'libs/qt/source',
     'libs/qt-style/source'
]

[tool.coverage.run]
command_line = "-m pytest --disable-pytest-warnings"
relative_files = true

[tool.coverage.report]
show_missing = true

[tool.ruff.format]
line-length = 79
quote-style = "double"
skip-magic-trailing-comma = true
