[project]
name = "ftrack.app.connect"
version = "0.1.0"
description = "A command line tool for connecting integrations."
authors = [{name = "ftrack Integrations Team", email = "integrations@backlight.co"}]
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "click>8.0",
    "uv>0.5.0",
]
[project.scripts]
connect = "ftrack.app.connect.cli:cli"

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"
