[tool.poetry]
name = "ftrack-connect"
version = "3.1.0rc2"
description='ftrack Connect desktop application.'
authors = ["ftrack Integrations Team <integrations@backlight.co>"]
readme = "README.md"
packages = [{include = "ftrack_connect", from = "source"}]
license = "Apache-2.0"
homepage = "https://ftrack.com"
repository = "https://github.com/ftrackhq/integrations/tree/main/apps/connect"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">= 3.8, < 3.11"
PySide6 = "^6.0.0"
clique = "1.6.1"
Riffle = ">= 2.0.0, < 3"
arrow = ">= 0.4.6, < 1"
platformdirs = "^4.0.0"
requests = ">= 2, <3"
qtawesome = "*"
darkdetect = "*"
certifi = ">=2022,<2023"
urllib3 = "<2"
pyyaml = "^6.0.1"

#ftrack
ftrack-python-api = "^2.5.4"
ftrack-action-handler = "*"
ftrack-utils = {  version = "^2.0.0"}
# framework dependencies
ftrack-framework-core = {  version = "^2.0.0"}

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^2.3.5, <3"

[tool.black]
line-length = 79
skip-string-normalization = true
