[tool.poetry]
name = "ftrack-connect"
version = "24.9.0rc1"
description='ftrack Connect desktop application.'
authors = ["ftrack Integrations Team <integrations@backlight.co>"]
readme = "README.md"
packages = [{include = "ftrack_connect", from = "source"}]
license = "Apache-2.0"
homepage = "https://ftrack.com"
repository = "https://github.com/ftrackhq/integrations/tree/main/apps/connect"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">= 3.8, < 3.11"
PySide6 = "6.6.3"
clique = "1.6.1"
Riffle = ">= 2.0.0" # Remove this one when possible
arrow = ">= 0.4.6, < 1"
platformdirs = "^4.0.0"
requests = ">= 2, <3"
qtawesome = "*"
darkdetect = "*"
certifi = ">=2022,<2023"
urllib3 = "<2"
pyyaml = "^6.0.1"

#ftrack
ftrack-python-api = "^2.5.4"
ftrack-action-handler = "*"
ftrack-utils = {  version = "^2.0.0"}
ftrack-framework-core = {  version = "^2.0.0"}

[tool.poetry.group.dev]
optional = true

# TODO: activate this and install using poetry install --with dev if you want to pick dependencies from local
[tool.poetry.group.dev.dependencies]
#ftrack-framework-core = { path = "../../libs/framework-core", develop = true }
#ftrack-utils = { path = "../../libs/utils", develop = true }

[tool.poetry.group.testPypi]
optional = true

# TODO: activate this and install using poetry install --with testPypi if you want to pick dependencies from test pypi
[tool.poetry.group.testPypi.dependencies]
#ftrack-framework-core = { version = "^2.0.0", source = "testpypi" }
#ftrack-utils = { version = "^2.0.0", source = "testpypi" }

[tool.poetry.group.installer]
optional = true

[tool.poetry.group.installer.dependencies]
ftrack-app-installer = { path = "../../installers/app-installer", develop = true }

[tool.poetry.scripts]
ftrack-connect-installer = "installer:main"

[tool.poetry.group.documentation]
optional = true

[tool.poetry.group.documentation.dependencies]
pyScss = ">= 1.2.0, < 2"
sphinx = ">= 1.8.5, < 4"
Jinja2 = ">2, <=3.0.3"
sphinx_rtd_theme = ">= 0.1.6, < 1"
lowdown = ">= 0.1.0, < 1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^2.3.5, <3"

[tool.black]
line-length = 79
skip-string-normalization = true
