[tool.poetry]
name = "ftrack-rv"
# RV just accepts minor and major version
# To match Backlight versioning we use year month patch (YY.MMP)
version = "24.0"
description='ftrack Connect RV integration'
authors = ["ftrack Integrations Team <integrations@backlight.co>"]
readme = "README.md"
packages = [{include = "ftrack_rv", from = "source"}]
license = "Apache-2.0"
homepage = "https://ftrack.com"
repository = "https://github.com/ftrackhq/integrations/tree/main/projects/rv"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">= 3.7, < 3.12"
ftrack-python-api = "^2.5.4"
ftrack-utils = {  version = "^2.0.0", optional = true }

[tool.poetry.extras]
ftrack-libs = ["ftrack-utils"]

[tool.black]
line-length = 79
skip-string-normalization = true
