# 1. PEP 621 Project Metadata (replaces [tool.poetry])
[project]
name = "ftrack-app-installer"
version = "0.0.0"
description = "ftrack App installer library"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">= 3.8, < 3.12"
authors = [
  { name = "ftrack Integrations Team", email = "integrations@backlight.co" }
]
dependencies = [
  "pyinstaller>=6.6.0, <7.0.0",
  "requests",
  "dmgbuild>=1.6.0",
]

# 2. Project URLs
[project.urls]
homepage = "https://ftrack.com"
repository = "https://github.com/ftrackhq/integrations/tree/main/installers/app_installer"

# 3. Build System (using hatchling)
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 4. Hatchling Configuration (replaces [tool.poetry.packages])
[tool.hatch.build.targets.wheel]
# This tells hatch to look for the package in the 'source' directory
packages = ["source/ftrack_app_installer"]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
