[tool.poetry]
name = "ftrack-pipeline-qt"
version = "0.0.0"
description='Qt driven ftrack Connect pipeline framework UI layer'
authors = ["ftrack Integrations Team <integrations@backlight.co>"]
readme = "README.md"
packages = [{include = "ftrack_pipeline_qt"}]
license = "Apache-2.0"
maintainers = [
    "LLuis Casals <lluis.casals@backlight.co>",
    "Henrik Norin <henrik.norin@backlight.co>",
]
homepage = "https://ftrack.com"
repository = "https://github.com/ftrackhq/ftrack-connect-pipeline-qt"

[tool.poetry.dependencies]
python = ">= 3.7, < 3.10"
"Qt.py" = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.group.development]
optional = true

[tool.poetry.group.development.dependencies]
PySide2 = "^5.0.0"
pyScss = "^1.2.0"
Jinja2 = "<3.1"
sphinx = ">= 1.8.5, < 4"
sphinx_rtd_theme = "^0.1.6"
lowdown = "^0.1.0"
black = "==23.1.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^2.3.5"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
latest-tag = true

[tool.poetry-dynamic-versioning.substitution]
files=["ftrack_pipeline_qt/_version.py"]
