[tool.poetry]
name = "ftrack-constants"
version = "2.0.0rc5"
description='ftrack constants library'
authors = ["ftrack Integrations Team <integrations@backlight.co>"]
readme = "README.md"
packages = [{include = "ftrack_constants", from = "source"}]
license = "Apache-2.0"
homepage = "https://ftrack.com"
repository = "https://github.com/ftrackhq/integrations/tree/main/libs/constants"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">= 3.7, < 3.12"
#ftrack
ftrack-utils = { version = "^2.0.0rc1", allow-prereleases = true, optional = true }

[tool.poetry.extras]
ftrack-libs = ["ftrack-utils"]

[tool.black]
line-length = 79
skip-string-normalization = true
