[project]
name = "ftrack-constants"
version = "4.0.0"
description = "ftrack constants library"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">= 3.13, < 3.14"
authors = [
  { name = "ftrack Integrations Team", email = "integrations@backlight.co" }
]

[project.urls]
homepage = "https://ftrack.com"
repository = "https://github.com/ftrackhq/integrations/tree/main/libs/constants"

[project.optional-dependencies]
ftrack-libs = [
  "ftrack-utils>=4.0.0, <5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["source/ftrack_constants"]

[tool.uv.sources]
ftrack-utils = { path = "../utils" }

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
