[project]
name = "dcc-test-harness"
version = "0.1.0"
description = "General-purpose test framework for DCC applications"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">= 3.13, < 3.14"
authors = [
  { name = "ftrack Integrations Team", email = "integrations@backlight.co" }
]

dependencies = [
  "pyyaml>=6.0",
  "ftrack-connect",
]

[project.urls]
homepage = "https://ftrack.com"
repository = "https://github.com/ftrackhq/integrations/tree/main/libs/dcc-test-harness"

[project.optional-dependencies]
test = [
  "pytest>=8.0,<9",
  "pytest-timeout>=2.3,<3",
]

[project.entry-points."pytest11"]
dcc_test_harness = "dcc_test_harness.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["source/dcc_test_harness"]

[tool.uv.sources]
ftrack-connect = { path = "../../apps/connect" }

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.pytest.ini_options]
addopts = "-v --timeout=60"
testpaths = ["tests"]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
