[tool.poetry]
name = "ftrack-framework-core"
version = "3.0.1"
description='ftrack Framework Core library'
authors = ["ftrack Integrations Team <integrations@backlight.co>"]
readme = "README.md"
packages = [{include = "ftrack_framework_core", from = "source"}]
license = "Apache-2.0"
homepage = "https://ftrack.com"
repository = "https://github.com/ftrackhq/integrations/tree/main/libs/framework-core"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">= 3.7, < 3.12"
ftrack-python-api = "^2.5.4"
six = ">= 1, < 2" # TODO: remove this ASAP
platformdirs = "^4.0.0"
pyyaml = "^6.0.1"
#ftrack
ftrack-constants= {  version = "^3.0.0", optional = true }
ftrack-utils = {  version = "^3.0.0", optional = true }


[tool.poetry.extras]
ftrack-libs = ["ftrack-constants", "ftrack-utils"]

[tool.poetry.group.documentation]
optional = true

[tool.poetry.group.documentation.dependencies]
markdown = "<=3.2.2"

[tool.black]
line-length = 79
skip-string-normalization = true
