[project]
name = "ftrack-framework-core"
version = "4.0.0"
description = "ftrack Framework Core library"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">= 3.11"
authors = [
  { name = "ftrack Integrations Team", email = "integrations@backlight.co" }
]

dependencies = [
  "ftrack-python-api>=3.1.0, <4.0.0",
  "six>=1, <2",
  "platformdirs>=4.0.0, <5.0.0",
  "pyyaml>=6.0.1, <7.0.0",
]

[project.urls]
homepage = "https://ftrack.com"
repository = "https://github.com/ftrackhq/integrations/tree/main/libs/framework-core"

[project.optional-dependencies]
ftrack-libs = [
  "ftrack-constants>=4.0.0, <5.0.0",
  "ftrack-utils>=4.0.0, <5.0.0",
]
documentation = [
  "markdown<=3.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["source/ftrack_framework_core"]

[tool.uv.sources]
ftrack-constants = { path = "../constants" }
ftrack-utils = { path = "../utils" }

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
