[tool.poetry]
name = "ftrack-framework-qt"
version = "2.0.0rc1"
description='ftrack framework qt library'
authors = ["ftrack Integrations Team <integrations@backlight.co>"]
readme = "README.md"
packages = [{include = "ftrack_framework_qt", from = "source"}]
license = "Apache-2.0"
homepage = "https://ftrack.com"
repository = "https://github.com/ftrackhq/integrations/tree/main/libs/framework-qt"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">= 3.7, < 3.12"
PySide2 = { version = ">= 5.13, <= 5.15"}#, python = "<3.10"}
#PySide6 = { version = "^6.5",  python = ">=3.10"}
"Qt.py" = ">=1.0.0, < 2"
#ftrack
ftrack-constants= { version = "> 1, < 3", optional = true }
ftrack-utils = { version = "> 1, < 3", optional = true }
ftrack-qt = { version = "> 1, < 3", optional = true }
#framework
ftrack-framework-core = { version = "> 1, < 3", optional = true }

[tool.poetry.extras]
ftrack-libs = ["ftrack-constants", "ftrack-utils", "ftrack-qt"]
framework-libs = ["ftrack-framework-core"]

[tool.black]
line-length = 79
skip-string-normalization = true
