[tool.poetry]
name = "ftrack-framework-qt"
version = "2.0.0"
description='ftrack framework qt library'
authors = ["ftrack Integrations Team <integrations@backlight.co>"]
readme = "README.md"
packages = [{include = "ftrack_framework_qt", from = "source"}]
license = "Apache-2.0"
homepage = "https://ftrack.com"
repository = "https://github.com/ftrackhq/integrations/tree/main/libs/framework-qt"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">= 3.7, < 3.12"
"Qt.py" = ">=1.0.0, < 2"
#ftrack
ftrack-constants= {  version = "^2.0.0", optional = true }
ftrack-utils = {  version = "^2.0.0", optional = true }
ftrack-qt = {  version = "^2.0.0", optional = true }
#framework
ftrack-framework-core = {  version = "^2.0.0", optional = true }

[tool.poetry.extras]
ftrack-libs = ["ftrack-constants", "ftrack-utils", "ftrack-qt"]
framework-libs = ["ftrack-framework-core"]

[tool.black]
line-length = 79
skip-string-normalization = true
