[project]
name = "ftrack-framework-qt"
version = "4.0.0"
description = "ftrack framework qt library"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">= 3.13, < 3.14"
authors = [
  { name = "ftrack Integrations Team", email = "integrations@backlight.co" }
]

[project.urls]
homepage = "https://ftrack.com"
repository = "https://github.com/ftrackhq/integrations/tree/main/libs/framework-qt"

[project.optional-dependencies]
pyside2 = [
  "PySide2>=5.13.2, <6.0.0",
]
pyside6 = [
  "PySide6>=6.5, <7.0.0",
]
ftrack-libs = [
  "ftrack-constants>=4.0.0, <5.0.0",
  "ftrack-utils>=4.0.0, <5.0.0",
  "ftrack-qt>=4.0.0, <5.0.0",
]
framework-libs = [
  "ftrack-framework-core>=4.0.0, <5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["source/ftrack_framework_qt"]

[tool.uv.sources]
ftrack-constants = { path = "../constants" }
ftrack-framework-core = { path = "../framework-core" }
ftrack-qt = { path = "../qt" }
ftrack-utils = { path = "../utils" }

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
