[tool.poetry]
name = "ftrack-qt-style"
version = "2.0.0rc1"
description='ftrack qt style library'
authors = ["ftrack Integrations Team <integrations@backlight.co>"]
readme = "README.md"
packages = [{include = "ftrack_qt_style", from = "source"}]
license = "Apache-2.0"
homepage = "https://ftrack.com"
repository = "https://github.com/ftrackhq/integrations"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">= 3.7, < 3.8"
ftrack-utils = { version = ">= 2, < 3", optional = true }

[tool.poetry.extras]
ftrack-libs = ["ftrack-utils"]

[tool.black]
line-length = 79
skip-string-normalization = true


# TODO: to be implemented. Check following links:
# Just call script in the current package: https://stackoverflow.com/questions/59286983/how-to-run-a-script-using-pyproject-toml-settings-and-poetry
# Call script from an extra package: https://python-poetry.org/docs/master/pyproject/#scripts
# [tool.poetry.scripts]
# build_resource = 'my_package.console:run'

