[project]
name = "ftrack-qt-style"
version = "4.0.0"
description = "ftrack qt style library"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">= 3.13, < 3.14"
authors = [
  { name = "ftrack Integrations Team", email = "integrations@backlight.co" }
]

[project.urls]
homepage = "https://ftrack.com"
repository = "https://github.com/ftrackhq/integrations/tree/main/libs/qt-style"

[project.optional-dependencies]
ftrack-libs = [
  "ftrack-utils>=4.0.0, <5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "source/ftrack_qt_style/*.py",
]

[tool.hatch.build.targets.wheel]
packages = ["source/ftrack_qt_style"]

[tool.uv.sources]
ftrack-utils = { path = "../utils" }

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


# TODO: to be implemented. Check following links:
# Just call script in the current package: https://stackoverflow.com/questions/59286983/how-to-run-a-script-using-pyproject-toml-settings-and-poetry
# Call script from an extra package: https://python-poetry.org/docs/master/pyproject/#scripts
# [tool.poetry.scripts]
# build_resource = 'my_package.console:run'
