[tool.poetry]
name = "ftrack-qt"
version = "3.0.0rc2"
description='ftrack qt library'
authors = ["ftrack Integrations Team <integrations@backlight.co>"]
readme = "README.md"
packages = [{include = "ftrack_qt", from = "source"}]
license = "Apache-2.0"
homepage = "https://ftrack.com"
repository = "https://github.com/ftrackhq/integrations/tree/main/libs/qt"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">= 3.7, < 3.12"
PySide2 = { version = "^5.13.2", optional = true }
PySide6 = { version = "^6.5", optional = true }
clique = "1.6.1"
#ftrack
ftrack-constants = {  version = "^2.0.0", allow-prereleases=true, source = "testpypi", optional = true }
ftrack-utils = {  version = "^3.0.0rc1", allow-prereleases=true, optional = true, source = "testpypi" }
ftrack-qt-style = {  version = "^2.0.0", allow-prereleases=true, source = "testpypi", optional = true }

[tool.poetry.extras]
pyside2 = ["PySide2"]
pyside6 = ["PySide6"]
ftrack-libs = ["ftrack-constants", "ftrack-utils", "ftrack-qt-style"]

[tool.black]
line-length = 79
skip-string-normalization = true
