[project]
name = "ftrack-qt"
version = "4.0.0"
description = "ftrack qt library"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">= 3.13, < 3.14"
authors = [
  { name = "ftrack Integrations Team", email = "integrations@backlight.co" }
]

dependencies = [
  "clique==1.6.1",
]

[project.urls]
homepage = "https://ftrack.com"
repository = "https://github.com/ftrackhq/integrations/tree/main/libs/qt"

[project.optional-dependencies]
pyside2 = [
  "PySide2>=5.13.2, <6.0.0",
]
pyside6 = [
  "PySide6>=6.5, <7.0.0",
]
ftrack-libs = [
  "ftrack-constants>=4.0.0, <5.0.0",
  "ftrack-utils>=4.0.0, <5.0.0",
  "ftrack-qt-style>=4.0.0, <5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["source/ftrack_qt"]

[tool.uv.sources]
ftrack-constants = { path = "../constants" }
ftrack-utils = { path = "../utils" }
ftrack-qt-style = { path = "../qt-style" }

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
