[tool.poetry]
name = "ftrack-utils"
version = "3.1.4"
description='ftrack utils library'
authors = ["ftrack Integrations Team <integrations@backlight.co>"]
readme = "README.md"
packages = [{include = "ftrack_utils", from = "source"}]
license = "Apache-2.0"
homepage = "https://ftrack.com"
repository = "https://github.com/ftrackhq/integrations/tree/main/libs/utils"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">= 3.7, < 3.12"
ftrack-python-api = "^2.5.4"
clique = "1.6.1"
six = ">= 1, < 2"
toml = "^0.10.2"

[tool.black]
line-length = 79
skip-string-normalization = true

