[project]
name = "ftrack-utils"
version = "4.0.1"
description = "ftrack utils library"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">= 3.13, < 3.14"
authors = [
  { name = "ftrack Integrations Team", email = "integrations@backlight.co" }
]

dependencies = [
  "ftrack-python-api>=3.1.0, <4.0.0",
  "clique==1.6.1",
  "packaging>=25, <26",
  "six>=1, <2",
  "toml>=0.10.2, <1.0.0",
]

[project.urls]
homepage = "https://ftrack.com"
repository = "https://github.com/ftrackhq/integrations/tree/main/libs/utils"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["source/ftrack_utils"]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
