[tool.poetry]
name = "ftrack-application-launcher"
version = "2.0.0rc1"
description='ftrack Connect application launch main class.'
authors = ["ftrack Integrations Team <integrations@backlight.co>"]
readme = "README.md"
packages = [{include = "ftrack_application_launcher", from = "source"}]
license = "Apache-2.0"
homepage = "https://ftrack.com"
repository = "https://github.com/ftrackhq/integrations"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">= 3.7, < 3.11"
ftrack-python-api = ">= 1, < 3"
ftrack-action-handler = "*"
ftrack-utils = ">= 2, < 3"
